minor update to settings hover text

--- a/settings.html
+++ b/settings.html
@@ -146,7 +146,7 @@
                                                         title="Randomly shuffle your units in slot 1 so the placement varies."><input
                                                                 type="checkbox" id="shuffleSwitch1">Slot 1</label></td>
                                         <td><label for="soulSwitch1"
-                                                        title="Prioritize units with souls in slot 1 so the placement varies."><input
+                                                        title="Prioritize units with souls in slot 1."><input
                                                                 type="checkbox" id="shuffleSwitch1">Slot 1</label></td>
                                 </tr>
                                 <tr>
@@ -158,7 +158,7 @@
                                                         title="Randomly shuffle your units in slot 2 so the placement varies."><input
                                                                 type="checkbox" id="shuffleSwitch2">Slot 2</label></td>
                                         <td><label for="soulSwitch2"
-                                                        title="Prioritize units with souls in slot 2 so the placement varies."><input
+                                                        title="Prioritize units with souls in slot 2."><input
                                                                 type="checkbox" id="shuffleSwitch2">Slot 2</label></td>
                                 </tr>
                                 <tr>
@@ -170,7 +170,7 @@
                                                         title="Randomly shuffle your units in slot 3 so the placement varies."><input
                                                                 type="checkbox" id="shuffleSwitch3">Slot 3</label></td>
                                         <td><label for="soulSwitch3"
-                                                        title="Prioritize units with souls in slot 3 so the placement varies."><input
+                                                        title="Prioritize units with souls in slot 3."><input
                                                                 type="checkbox" id="shuffleSwitch3">Slot 3</label></td>
                                 </tr>
                                 <tr>
@@ -182,7 +182,7 @@
                                                         title="Randomly shuffle your units in slot 4 so the placement varies."><input
                                                                 type="checkbox" id="shuffleSwitch4">Slot 4</label></td>
                                         <td><label for="soulSwitch4"
-                                                        title="Prioritize units with souls in slot 4 so the placement varies."><input
+                                                        title="Prioritize units with souls in slot 4."><input
                                                                 type="checkbox" id="shuffleSwitch4">Slot 4</label></td>
                                 </tr>
                                 <tr>
@@ -196,7 +196,7 @@
                                                                 type="checkbox" id="shuffleSwitch5">Dungeons</label>
                                         </td>
                                         <td><label for="soulSwitch5"
-                                                        title="Prioritize units with souls in dungeons so the placement varies."><input
+                                                        title="Prioritize units with souls in dungeons."><input
                                                                 type="checkbox" id="shuffleSwitch5">Dungeons</label>
                                         </td>
                                 </tr>
