correction on settings

--- a/settings.html
+++ b/settings.html
@@ -134,7 +134,7 @@
                                         </td>
                                         <td><label for="soulSwitch0"
                                                         title="Prioritize units with souls in all slots."><input
-                                                                type="checkbox" id="shuffleSwitch0">All slots</label>
+                                                                type="checkbox" id="soulSwitch0">All slots</label>
                                         </td>
                                 </tr>
                                 <tr>
@@ -147,7 +147,7 @@
                                                                 type="checkbox" id="shuffleSwitch1">Slot 1</label></td>
                                         <td><label for="soulSwitch1"
                                                         title="Prioritize units with souls in slot 1."><input
-                                                                type="checkbox" id="shuffleSwitch1">Slot 1</label></td>
+                                                                type="checkbox" id="soulSwitch1">Slot 1</label></td>
                                 </tr>
                                 <tr>
                                         <td><label for="priorityListSwitch2"
@@ -159,7 +159,7 @@
                                                                 type="checkbox" id="shuffleSwitch2">Slot 2</label></td>
                                         <td><label for="soulSwitch2"
                                                         title="Prioritize units with souls in slot 2."><input
-                                                                type="checkbox" id="shuffleSwitch2">Slot 2</label></td>
+                                                                type="checkbox" id="soulSwitch2">Slot 2</label></td>
                                 </tr>
                                 <tr>
                                         <td><label for="priorityListSwitch3"
@@ -171,7 +171,7 @@
                                                                 type="checkbox" id="shuffleSwitch3">Slot 3</label></td>
                                         <td><label for="soulSwitch3"
                                                         title="Prioritize units with souls in slot 3."><input
-                                                                type="checkbox" id="shuffleSwitch3">Slot 3</label></td>
+                                                                type="checkbox" id="soulSwitch3">Slot 3</label></td>
                                 </tr>
                                 <tr>
                                         <td><label for="priorityListSwitch4"
@@ -183,7 +183,7 @@
                                                                 type="checkbox" id="shuffleSwitch4">Slot 4</label></td>
                                         <td><label for="soulSwitch4"
                                                         title="Prioritize units with souls in slot 4."><input
-                                                                type="checkbox" id="shuffleSwitch4">Slot 4</label></td>
+                                                                type="checkbox" id="soulSwitch4">Slot 4</label></td>
                                 </tr>
                                 <tr>
                                         <td><label for="priorityListSwitch5"
@@ -197,7 +197,7 @@
                                         </td>
                                         <td><label for="soulSwitch5"
                                                         title="Prioritize units with souls in dungeons."><input
-                                                                type="checkbox" id="shuffleSwitch5">Dungeons</label>
+                                                                type="checkbox" id="soulSwitch5">Dungeons</label>
                                         </td>
                                 </tr>
                                 <tr>
