--- a/html/units.html
+++ b/html/units.html
@@ -413,6 +413,8 @@
             <input type="radio" name="slot" value="3">Slot 3</input>
             <input type="radio" name="slot" value="4">Slot 4</input>
             <input type="radio" name="slot" value="5">Dungeons</input>
+            <input type="radio" name="slot" value="6">Clash</input>
+            <input type="radio" name="slot" value="7">Duels</input>
         </div>
         <div id="unitTableContainer"></div><br>
         <h1>THIS OPTION RESETS YOUR CHANGES</h1>
