added ability to place in the clash ending soonest if multiple are joined and ready for placement

--- a/settings.html
+++ b/settings.html
@@ -500,6 +500,9 @@
                                                                 type="checkbox" id="joinDuelSwitch"> Join Duels
                                                         ASAP</label>
                                         </td>
+                                        <td><label for="nextClashSwitch"
+                                                        title="If multiple clashes are joined and more than one are ready to place units, choose the Clash ending soonest to maximize bones. Otherwise, the leftmost battle will be selected."><input
+                                                                type="checkbox" id="nextClashSwitch"> Choose next ending Clash</label>
                                         </td>
                                 </tr>
                         </tbody>
