added ability to set specific modes per slot for idle switcher

--- a/settings.html
+++ b/settings.html
@@ -60,23 +60,6 @@
                 <table width="100%">
                         <tbody>
                                 <tr>
-                                        <td width="33%"><label for="offlineSwitch"
-                                                        title="Switch captains that are idling, useful for captains that go offline and slow captains."><input
-                                                                type="checkbox" id="offlineSwitch"> Switch idle
-                                                        captain</label>
-                                        </td>
-                                        <td width="33%"><label for="skipSwitch"
-                                                        title="After an idle switch, leave the slot blank if no loyalty captain is available."><input
-                                                                type="checkbox" id="skipSwitch"> Leave blank if no
-                                                        loyalty</label>
-                                        </td>
-                                        <td width="33%"><label for="afterSwitch"
-                                                        title="Enable slot after removing captain on leave after battle"><input
-                                                                type="checkbox" id="afterSwitch"> Enable slot on
-                                                        leave after</label>
-                                        </td>
-                                </tr>
-                                <tr>
                                         <td><label for="commonSwitch"><input type="checkbox" id="commonSwitch"> Use
                                                         common
                                                         units</label></td>
@@ -280,10 +263,169 @@
                                                                 type="checkbox" id="soulSwitch5"></label>
                                         </td>
                                 </tr>
+                                <tr>
+                                        <td>
+                                                <div title="If 'Switch idle captains' is selected, replace the slot with Campaign. This is default behavior and will follow 'Leave blank if no loyalty' as well as the idle masterlist options, if selected.">
+                                                        Idle Campaign:</div>
+                                        </td>
+                                        <td>
+                                                <label for="idleSwitch0_Campaign"
+                                                        title="If 'Switch idle captains' is selected, replace all slots (excluding any additional slots selected) with Campaign."><input
+                                                                type="checkbox" class="idleCampaignCheckbox0 idleSlot0Checkbox" id="idleSwitch0_Campaign"></label>
+                                        </td>
+                                        <td>
+                                                <label for="idleSwitch1_Campaign"
+                                                        title="If 'Switch idle captains' is selected, replace slot 1 with Campaign."><input
+                                                                type="checkbox" class="idleCampaignCheckbox idleSlot1Checkbox" id="idleSwitch1_Campaign"></label>
+                                        </td>
+                                        <td>
+                                                <label for="idleSwitch2_Campaign"
+                                                        title="If 'Switch idle captains' is selected, replace slot 2 with Campaign."><input
+                                                                type="checkbox" class="idleCampaignCheckbox idleSlot2Checkbox" id="idleSwitch2_Campaign"></label>
+                                        </td>
+                                        <td>
+                                                <label for="idleSwitch3_Campaign"
+                                                        title="If 'Switch idle captains' is selected, replace slot 3 with Campaign."><input
+                                                                type="checkbox" class="idleCampaignCheckbox idleSlot3Checkbox" id="idleSwitch3_Campaign"></label>
+                                        </td>
+                                        <td>
+                                                <label for="idleSwitch4_Campaign"
+                                                        title="If 'Switch idle captains' is selected, replace slot 4 with Campaign."><input
+                                                                type="checkbox" class="idleCampaignCheckbox idleSlot4Checkbox" id="idleSwitch4_Campaign"></label>
+                                        </td>
+                                        <td>
+                                        </td>
+                                        <td>
+                                        </td>
+                                        <td>
+                                        </td>
+                                </tr>
+                                <tr>
+                                        <td>
+                                                <div title="If 'Switch idle captains' is selected, replace the slot with Dungeon. This will override 'Leave blank if no loyalty' as well as the idle masterlist options, if selected. Also, if no dungeons are found, the slot will remain empty.">
+                                                        Idle Dungeon:</div>
+                                        </td>
+                                        <td>
+                                        </td>
+                                        <td>
+                                                <label for="idleSwitch1_Dungeon"
+                                                        title="If 'Switch idle captains' is selected, replace slot 1 with Dungeon."><input
+                                                                type="checkbox" class="idleDungeonCheckbox idleSlot1Checkbox" id="idleSwitch1_Dungeon"></label>
+                                        </td>
+                                        <td>
+                                                <label for="idleSwitch2_Dungeon"
+                                                        title="If 'Switch idle captains' is selected, replace slot 2 with Dungeon."><input
+                                                                type="checkbox" class="idleDungeonCheckbox idleSlot2Checkbox" id="idleSwitch2_Dungeon"></label>
+                                        </td>
+                                        <td>
+                                                <label for="idleSwitch3_Dungeon"
+                                                        title="If 'Switch idle captains' is selected, replace slot 3 with Dungeon."><input
+                                                                type="checkbox" class="idleDungeonCheckbox idleSlot3Checkbox" id="idleSwitch3_Dungeon"></label>
+                                        </td>
+                                        <td>
+                                                <label for="idleSwitch4_Dungeon"
+                                                        title="If 'Switch idle captains' is selected, replace slot 4 with Dungeon."><input
+                                                                type="checkbox" class="idleDungeonCheckbox idleSlot4Checkbox" id="idleSwitch4_Dungeon"></label>
+                                        </td>
+                                        <td>
+                                        </td>
+                                        <td>
+                                        </td>
+                                        <td>
+                                        </td>
+                                </tr>
+                                <tr>
+                                        <td>
+                                                <div title="If 'Switch idle captains' is selected, replace the slot with Clash. This will override 'Leave blank if no loyalty' as well as the idle masterlist options, if selected. Also, if no clashes are found, the slot will remain empty.">
+                                                        Idle Clash:</div>
+                                        </td>
+                                        <td>
+                                                <label for="idleSwitch0_Clash"
+                                                        title="If 'Switch idle captains' is selected, replace all slots (excluding any additional slots selected) with Clash."><input
+                                                                type="checkbox" class="idleClashCheckbox0 idleSlot0Checkbox" id="idleSwitch0_Clash"></label>
+                                        </td>
+                                        <td>
+                                                <label for="idleSwitch1_Clash"
+                                                        title="If 'Switch idle captains' is selected, replace slot 1 with Clash."><input
+                                                                type="checkbox" class="idleClashCheckbox idleSlot1Checkbox" id="idleSwitch1_Clash"></label>
+                                        </td>
+                                        <td>
+                                                <label for="idleSwitch2_Clash"
+                                                        title="If 'Switch idle captains' is selected, replace slot 2 with Clash."><input
+                                                                type="checkbox" class="idleClashCheckbox idleSlot2Checkbox" id="idleSwitch2_Clash"></label>
+                                        </td>
+                                        <td>
+                                                <label for="idleSwitch3_Clash"
+                                                        title="If 'Switch idle captains' is selected, replace slot 3 with Clash."><input
+                                                                type="checkbox" class="idleClashCheckbox idleSlot3Checkbox" id="idleSwitch3_Clash"></label>
+                                        </td>
+                                        <td>
+                                                <label for="idleSwitch4_Clash"
+                                                        title="If 'Switch idle captains' is selected, replace slot 4 with Clash."><input
+                                                                type="checkbox" class="idleClashCheckbox idleSlot4Checkbox" id="idleSwitch4_Clash"></label>
+                                        </td>
+                                        <td>
+                                        </td>
+                                        <td>
+                                        </td>
+                                        <td>
+                                        </td>
+                                </tr>
+                                <tr>
+                                        <td>
+                                                <div title="If 'Switch idle captains' is selected, replace the slot with Duel. This will override 'Leave blank if no loyalty' as well as the idle masterlist options, if selected. Also, if no duels are found, the slot will remain empty.">
+                                                        Idle Duel:</div>
+                                        </td>
+                                        <td>
+                                        </td>
+                                        <td>
+                                                <label for="idleSwitch1_Duel"
+                                                        title="If 'Switch idle captains' is selected, replace slot 1 with Duel."><input
+                                                                type="checkbox" class="idleDuelCheckbox idleSlot1Checkbox" id="idleSwitch1_Duel"></label>
+                                        </td>
+                                        <td>
+                                                <label for="idleSwitch2_Duel"
+                                                        title="If 'Switch idle captains' is selected, replace slot 2 with Duel."><input
+                                                                type="checkbox" class="idleDuelCheckbox idleSlot2Checkbox" id="idleSwitch2_Duel"></label>
+                                        </td>
+                                        <td>
+                                                <label for="idleSwitch3_Duel"
+                                                        title="If 'Switch idle captains' is selected, replace slot 3 with Duel."><input
+                                                                type="checkbox" class="idleDuelCheckbox idleSlot3Checkbox" id="idleSwitch3_Duel"></label>
+                                        </td>
+                                        <td>
+                                                <label for="idleSwitch4_Duel"
+                                                        title="If 'Switch idle captains' is selected, replace slot 4 with Duel."><input
+                                                                type="checkbox" class="idleDuelCheckbox idleSlot4Checkbox" id="idleSwitch4_Duel"></label>
+                                        </td>
+                                        <td>
+                                        </td>
+                                        <td>
+                                        </td>
+                                        <td>
+                                        </td>
+                                </tr>
                         </tbody>
                 </table>
                 <table width="100%">
                         <tbody>
+                                <tr>
+                                        <td width="33%"><label for="offlineSwitch"
+                                                        title="Switch captains that are idling, useful for captains that go offline and slow captains. If none of the slot options above are selected, it will default to campaign battles."><input
+                                                                type="checkbox" id="offlineSwitch"> Switch idle
+                                                        captain (slot options above)</label>
+                                        </td>
+                                        <td width="33%"><label for="skipSwitch"
+                                                        title="After an idle switch, leave the slot blank if no loyalty captain is available."><input
+                                                                type="checkbox" id="skipSwitch"> Leave blank if no
+                                                        loyalty</label>
+                                        </td>
+                                        <td width="33%"><label for="afterSwitch"
+                                                        title="Enable slot after removing captain on leave after battle"><input
+                                                                type="checkbox" id="afterSwitch"> Enable slot on
+                                                        leave after</label>
+                                        </td>
+                                </tr>
                                 <tr>
                                         <td>
                                                 <div class="x">&nbsp;</div>
